# zelos-extension-opcua

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
tests/: test_opcua.py
zelos_extension_opcua/: __init__.py  client.py  node_map.py
zelos_extension_opcua/cli/: __init__.py  app.py
zelos_extension_opcua/demo/: __init__.py  plc_device.json  simulator.py
